--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,11 @@ button:hover {
     text-align: left;
 }
 
-.color {
+.active {
+    text-decoration: line-through;
     color: red;
+}
+
+li:hover {
+    cursor:pointer;
 }
